Add context events and lineage relationships
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-4.md
+++ b/site/docs/release-notes/4-4.md
@@ -1,15 +1,20 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 4.4 (Expected October 2023)
+## Release 4.4 (Expected December 2023)
 
 _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is released**_
 
 ??? functional "Open Metadata Types"
     * A new classification called [*RootCollection*](/types/0/0021-Collections) can be added to a collection entity to indicate that it is the root of collection hierarchy.
     * The [*Collection*](/types/0/0021-Collections) entity has a new attribute called *collectionType* that can be used to identify the concept that the collection represents.
+    * A new supertype called [*Action*](/types/1/0137-Actions) has been added to the [*ToDo*](/types/1/0137-Actions) and [*GovernanceAction*](/types/4/0463-Governance-Actions).
+    * The [*Actions*](/types/1/0137-Actions) relationship now links an [*Action*](/types/1/0137-Actions) to a [*Referenceable*](/types/0/0010-Base-Model).
     * A new classification called [*PersonalProject*](/types/1/0130-Projects) can be added to a project entity to indicate that this is an informal project that have been created by an individual to help them organize their work.
     * A new classification called [*DataScope*](/types/2/0210-Data-Stores) can be added to a referenceable entity (typically a DataStore or DataSet) to define the scope of the associated data resource in space and time.
+    * Although not yet implemented in the [Engine Host](/concepts/engine-host), there are types for a new type of governance engine called the [*EventActionEngine*](/types/4/0461-Governance-Engines) and its corresponding governance service called [*EventActionService*](/types/4/0461-Governance-Engines).  This new engine is for managing context events, scheduling and associated actions.
+    * A new entity called a [*ContextEvent*](/types/4/0475-Context-Events) plus associated elements has been added to provide a means to capture significant events that impact users, data, services, etcetera, to be recorded and used to explain why blips occurred in the past, or plan and take action to mitigate against blips in the future.
+    * There are new lineage relationships called [*UltimateSource*](/types/7/0755-Ultimate-Source-Destination) and [*UltimateDestination*](/types/7/0755-Ultimate-Source-Destination) can be used to capture the size and edges of an element's lineage graph have been added.  
 
 
 
