--- a/site/docs/release-notes/4-4.md
+++ b/site/docs/release-notes/4-4.md
@@ -14,7 +14,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is
     * A new classification called [*DataScope*](/types/2/0210-Data-Stores) can be added to a referenceable entity (typically a DataStore or DataSet) to define the scope of the associated data resource in space and time.
     * Although not yet implemented in the [Engine Host](/concepts/engine-host), there are types for a new type of governance engine called the [*EventActionEngine*](/types/4/0461-Governance-Engines) and its corresponding governance service called [*EventActionService*](/types/4/0461-Governance-Engines).  This new engine is for managing context events, scheduling and associated actions.
     * A new entity called a [*ContextEvent*](/types/4/0475-Context-Events) plus associated elements has been added to provide a means to capture significant events that impact users, data, services, etcetera, to be recorded and used to explain why blips occurred in the past, or plan and take action to mitigate against blips in the future.
-    * There are new lineage relationships called [*UltimateSource*](/types/7/0755-Ultimate-Source-Destination) and [*UltimateDestination*](/types/7/0755-Ultimate-Source-Destination) can be used to capture the size and edges of an element's lineage graph have been added.  
+    * There is a new schema extraction relationship called [*DiscoveredLinkedDataField*](/types/6/0615-Schema-Extraction) that can be used to describe associations between data fields.
+    * There are new lineage relationships called [*UltimateSource*](/types/7/0755-Ultimate-Source-Destination) and [*UltimateDestination*](/types/7/0755-Ultimate-Source-Destination) can be used to capture the size and edges of an element's lineage graph have been added.
 
 
 
