--- a/site/docs/release-notes/2-6.md
+++ b/site/docs/release-notes/2-6.md
@@ -62,8 +62,8 @@ With this change it will also be easier for Egeria to host other types of govern
 The following types have been added to support the governance action engines:
 
 * [0461 Governance Action Engines](/types/4/0461-Governance-Engines)
-* [0462 Governance Action Types](/types/4/0462-Governance-Action-Types)
-* [0463 Governance Actions](/types/4/0463-Governance-Actions)
+* [0462 Governance Action Processes](/types/4/0462-Governance-Action-Processes)
+* [0463 Engine Actions](/types/4/0463-Engine-Actions)
 
 #### Updates to open metadata types for Lineage Mapping
 
