--- a/site/docs/release-notes/3-15.md
+++ b/site/docs/release-notes/3-15.md
@@ -12,9 +12,9 @@
 
 ??? functional "Open Metadata Types"
 
-    * A new attribute called *waitTime* has been added to the [*GovernanceActionType*](/types/4/0462-Governance-Action-Types) entity type to allow delays to be added into a process definition.
-    * A new attribute called *completionMessage* has been added to the [*GovernanceAction*](/types/4/0463-Governance-Action) entity type to allow a message from the governance service on the results of the action or the reasons why it failed.
-    * A new attribute called *completionMessage* has been added to the [*TargetForAction*](/types/4/0463-Governance-Action) relationship type to allow a message from the governance service on the results of the processing the target or the reasons why it failed.
+    * A new attribute called *waitTime* has been added to the [*GovernanceActionProcessStep*](/types/4/0462-Governance-Action-Processes) entity type to allow delays to be added into a process definition.
+    * A new attribute called *completionMessage* has been added to the [*EngineAction*](/types/4/0463-Engine-Action) entity type to allow a message from the governance service on the results of the action or the reasons why it failed.
+    * A new attribute called *completionMessage* has been added to the [*TargetForAction*](/types/4/0463-Engine-Action) relationship type to allow a message from the governance service on the results of the processing the target or the reasons why it failed.
     * Appropriate properties have been added to the [*DigitalProduct*](/types/7/0710-Digital-Service) classification.  These were missing from its original definition in release 3.13.
     * A new relationship called [*DigitalServiceProduct*](/types/7/0710-Digital-Service) links a *DigitalService* to a *DigitalProduct*.
     * The [*DigitalServiceOperator*](/types/7/0715-Digital-Service-Ownership) can now be any *Referenceable* rather than being restricted to a *Team*.
