--- a/site/docs/release-notes/4-4.md
+++ b/site/docs/release-notes/4-4.md
@@ -6,6 +6,7 @@
 _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is released**_
 
 ??? functional "Open Metadata Types"
+    * The [*Anchors*](/types/0/0010-Base-Model) classification is able to store the type of the anchor as well as its GUID.
     * A new classification called [*RootCollection*](/types/0/0021-Collections) can be added to a collection entity to indicate that it is the root of collection hierarchy.
     * The [*Collection*](/types/0/0021-Collections) entity has a new attribute called *collectionType* that can be used to identify the concept that the collection represents.
     * A new supertype called [*Action*](/types/1/0137-Actions) has been added to the [*ToDo*](/types/1/0137-Actions) and [*EngineAction*](/types/4/0463-Engine-Actions).
