Add content for V4.4
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -12,7 +12,7 @@
     * A new classification called [*RootCategory*](/types/3/0320-Category-Hierarchy) has been added to identify *GlossaryCategory* entities that are the top of a category hierarchy.
     * The [*GlossaryTermEvolution*](/types/3/0385-Controlled-Glossary-Development) relationship has been deprecated.
     * New classifications *EditingGlossary* and *StagingGlossary* have been added to the [*0385*](/types/3/0385-Controlled-Glossary-Development) model to support the controlled glossary development process.
-    * A new classification called [*DataFieldValues**](/types/2/0210-Data-Stores) allows the characterization of a collection of data values.
+    * A new classification called [*DataFieldValues*](/types/2/0210-Data-Stores) allows the characterization of a collection of data values.
     * A new attribute called *publishVersionIdentifier* has been added to [GlossaryTerm](/types/3/0330-Terms) to allow authors to control the version of published terms.
 
 ??? functional "New Open Metadata View Services (OMVS)"
