--- a/site/docs/release-notes/4-4.md
+++ b/site/docs/release-notes/4-4.md
@@ -17,7 +17,74 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is
     * A new entity called a [*ContextEvent*](/types/4/0475-Context-Events) plus associated elements has been added to provide a means to capture significant events that impact users, data, services, etcetera, to be recorded and used to explain why blips occurred in the past, or plan and take action to mitigate against blips in the future.
     * There is a new schema extraction relationship called [*DiscoveredLinkedDataField*](/types/6/0615-Schema-Extraction) that can be used to describe associations between data fields.  The [*DataField*](/types/6/0615-Schema-Extraction) entity has new attributes to align it more closely with [SchemaAttribute](/types/5/0505-Schema-Attributes).
     * There are new lineage relationships called [*UltimateSource*](/types/7/0755-Ultimate-Source-Destination) and [*UltimateDestination*](/types/7/0755-Ultimate-Source-Destination) can be used to capture the size and edges of an element's lineage graph have been added.
+    * The *GroupedMedia* relationship is deprecated in favour of [*DataContentForDataSet*](/types/2/0210-Data-Stores).
+    * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
+    * There are new types to help automate the curation of assets.  They are in a new model called [0207](/types/2/0207-Deployed-Implementation-Types) and are called *DeployedImplementationType*, *FileType* and *CatalogTarget*.
 
+??? warning "XTDB repository connector are now in egeria.git"
+    The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  There are three new administration commands to simplify the configuration of an XTDB repository.  This change is in recognition that XTDB is our premier metadata repository.  
 
+??? functional "Extended support for files"
+    The context for the [Files Integrator OMIS](/services/omis/files-integrator/overview) has been updated to support a file system listener.
+
+??? functional "New View Service: Automated Curation OMVS"
+    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service in design that supports UIs that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
+    
+??? functional "New View Service: Collection Manager OMVS"
+    [Collection Manager OMVS](/services/omvs/collection-manager/overview) supports the organizing and browsing of metadata in collections.  Collections can themselves be organized hierarchically.  An example of its use is in managing the collections of assets that make up digital products.
+
+??? functional "New View Service: Notification Manager OMVS"
+    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
+
+??? functional "New Engine Service: Event Action OMES"
+    [Event Action OMES](/services/omes/event-action/overview) supports the running of [event-action-services](/concepts/event-action-service).
+
+??? functional "Improved anchor support"
+    Anchor classifications now include the type name of the anchor entity.  This allows the Anchor classification to be used to search for string values in any element that is anchored to a particular type of element.
+
+??? functional "New Apache Atlas Connector"
+    There is a new [open discovery service](/concepts/open-discovery-service) that provides a report on the content of an Apache Atlas server.  It is called the [Apache Atlas Open Discovery Service](/connectors/discovery/apache-atlas-discovery-service).
+
+??? functional "Consolidation of UI Backend Services"
+    Today there are two approaches to providing the backend services for a UI:
+
+    * The OMAG Server Platform provides a set of view services. These are used by the React UI.
+    * There is also a set of services in the Egeria UI Application. These are used by the General User UI.
+
+    The issue with this approach is when the same service is needed for both UIs, it has to be implemented twice, one in each runtime. 
+
+    There is now a common approach for backend services, centered around the [view server](/concepts/view-server). This can run in the OMAG Server Platform, or the new single server OMAG Server runtime.  The Open Metadata View Services (OMVSs) running in the view server will provide all the services for the UIs. To make this possible, new services for token management have been added to the OMAG Server Platform and OMAG Server runtimes.  There are also updates to the view services.  The change is summarized in the diagram below:
+
+    ![UI API migration](/user-interfaces/ui-migration-api-styles.svg)
+
+    More details of the changes are described below:
+
+    ??? functional "New View Service: Asset Catalog OMVS"
+        [Asset Catalog OMVS](/services/omvs/asset-catalog/overview) is a new view service that supports the `/assets` and `/lineage` services from Egeria UI Application.  There are two versions of each call, one of which is deprecated.  The deprecated version exactly matches the API supported by the Egeria UI application, however, it does not manage exceptions in the way expected by an Egeria API.  It will remain in place until the existing UI components are updated to support Egeria's standard exception handling.
+
+    ??? functional "Updates to Glossary Browser OMVS"
+        Glossary Browser OMVS has been extended to support the `/glossary` services from the Egeria UI application.  They are deprecated because they do not support the standard exception handling, but are in place to support existing UI components.  Once the UI components have been updated to support the main API then these new services will be removed.
+
+    ??? danger "Changes to view service REST API URLs"
+        The following Open Metadata View Services (OMVSs) (and all future OMVSs) support the new URL pattern of `{{baseURL}}/servers/{{server}}/api/open-metadata/{{serviceURLRoot}}/...`
+
+        * [Asset Catalog OMVS](/services/omvs/asset-catalog/overview)
+        * [Automated Curation OMVS](/services/omvs/automated-curation/overview)
+        * [Collection Manager OMVS](/services/omvs/automated-curation/overview)
+        * [Glossary Browser OMVS](/services/omvs/glossary-browser/overview)
+        * [Glossary Workflow OMVS](/services/omvs/glossary-workflow/overview)
+        * [My Profile OMVS](/services/omvs/my-profile/overview)
+        * [Notification Manager OMVS](/services/omvs/notification-manager/overview)
+
+        The following OMVSs will continue to support the original URL pattern of `{{baseURL}}/servers/{{server}}/open-metadata/view-services/{{serviceURLRoot}}/...` until the React UI components are updated to support the new style of URL.
+
+        * [Dynamic Infrastructure and Operations OMVS](/services/omvs/dino/overview)
+        * [Glossary Author OMVS](/services/omvs/glossary-author/overview)
+
+    ??? deprecated "Deprecation of Egeria UI Application"
+        Due to the addition of the new View Services and support for tokens in the OMAG Server Platform and OMAG Server runtimes, the Egeria UI Application is now deprecated.  New UI components should use the [Open Metadata View Services (OMVS)](/services/omvs).
+
+    ??? deprecated "Asset Catalog OMAS and Glossary View OMAS"
+        The Glossary View OMAS and Asset Catalog OMAS function has now moved to Glossary Browser OMVS and Asset Catalog OMVS respectively and so Glossary View OMAS and Asset Catalog OMAS are no longer needed.  They will remain in the codebase to support the Egeria UI Application and will be removed at the same time as this runtime.
 
 --8<-- "snippets/abbr.md"
