Typos and links
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -70,7 +70,7 @@ Release 4.3 continues the process of improving Egeria's usability.  These change
     There is a new option on the repository workbench to allow you to restrict the number of different types of instances that are tested.  By default, all combinations of the types supported by the technology under test, are used when testing the instance methods.  For native repository connectors, that can add up to a lot of tests, taking many hours to run.  In 4.3, we have introduced a new option called *testEntityTypes* that is [added to the workbench configuration](/guides/admin/servers/configuring-a-conformance-test-server). It is set to a list of entity types such as `["Asset", "InformalTag"]` and the tests are restricted to these types, their super types and any relationships and classifications that can connector to these entity types. 
 
 ??? functional "Metadata Observability"
-    There is a new [Audit log severity called ACTIVITY](/concepts/audit_log) that is used to report activity in the open metadata ecosystem.  This severity is used when logging messages about:
+    There is a new [Audit log severity called ACTIVITY](/concepts/audit-log) that is used to report activity in the open metadata ecosystem.  This severity is used when logging messages about:
 
     * The REST API calls made by each user.
     * The requests to retrieve, create and maintain assets.
