Change deployed implementation type/file type to valid values
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-4.md
+++ b/site/docs/release-notes/4-4.md
@@ -19,6 +19,7 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is
     * There are new lineage relationships called [*UltimateSource*](/types/7/0755-Ultimate-Source-Destination) and [*UltimateDestination*](/types/7/0755-Ultimate-Source-Destination) can be used to capture the size and edges of an element's lineage graph have been added.
     * The *GroupedMedia* relationship is deprecated in favour of [*DataContentForDataSet*](/types/2/0210-Data-Stores).
     * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
+    * There is a new attribute called *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides a descriptive name of the concept that this valid value describes a possible value for.
     * There are new types to help automate the curation of assets.  They are in a new model called [0207](/types/2/0207-Deployed-Implementation-Types) and are called *DeployedImplementationType*, *FileType* and *CatalogTarget*.
 
 ??? warning "XTDB repository connector are now in egeria.git"
