Improve description of integration groups and catalog targets
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-4.md
+++ b/site/docs/release-notes/4-4.md
@@ -19,8 +19,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is
     * There are new lineage relationships called [*UltimateSource*](/types/7/0755-Ultimate-Source-Destination) and [*UltimateDestination*](/types/7/0755-Ultimate-Source-Destination) can be used to capture the size and edges of an element's lineage graph have been added.
     * The *GroupedMedia* relationship is deprecated in favour of [*DataContentForDataSet*](/types/2/0210-Data-Stores).
     * The [*DataFile*](/types/2/0220-Files-and-Folders) type has a attribute called *fileExtension*.  New types that inherit from *DataFile* have been defined for a wide range of file types: [*SpreadsheetFile*](/types/2/0220-Files-and-Folders), [*XMLFile*](/types/2/0220-Files-and-Folders), [*AudioFile*](/types/2/0221-Document-Stores), [*VideoFile*](/types/2/0221-Document-Stores), [*3DImageFile*](/types/2/0221-Document-Stores), [*RasterFile*](/types/2/0221-Document-Stores), [*VectorFile*](/types/2/0221-Document-Stores), [*SourceCodeFile*](/types/2/0280-Software-Development-Assets), [*ExecutableFile*](/types/2/0280-Software-Development-Assets), [*ScriptFile*](/types/2/0280-Software-Development-Assets), [*BuildInstructionFile*](/types/2/0280-Software-Development-Assets), [*YAMLFile*](/types/2/0280-Software-Development-Assets), [*PropertiesFile*](/types/2/0280-Software-Development-Assets), and [*ArchiveFile*](/types/2/0226-Archive-Files).  There is also a new relationship called [*ArchiveFileContents*](/types/2/0226-Archive-Files) to identify the contents of an archive file.
-    * There are new attribute called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values.
-    * There are new types to help automate the curation of assets.  They are in a new model called [0207](/types/2/0207-Deployed-Implementation-Types) and are called *DeployedImplementationType*, *FileType* and *CatalogTarget*.
+    * There are new attribute called *isCaseSensitive* and *category* for [*ValidValueDefinition*](/types/5/0545-Reference-Data) that provides additional information used to match valid values. In addition, there are two new types of valid value relationship: *ValidValueAssociation* and *ConsistentValidValues*.
+    * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
 
 ??? warning "XTDB repository connector are now in egeria.git"
     The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  There are three new administration commands to simplify the configuration of an XTDB repository.  This change is in recognition that XTDB is our premier metadata repository.  
@@ -87,5 +87,26 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is
 
     ??? deprecated "Asset Catalog OMAS and Glossary View OMAS"
         The Glossary View OMAS and Asset Catalog OMAS function has now moved to Glossary Browser OMVS and Asset Catalog OMVS respectively and so Glossary View OMAS and Asset Catalog OMAS are no longer needed.  They will remain in the codebase to support the Egeria UI Application and will be removed at the same time as this runtime.
+
+??? functional "New file extensions to Egeria' standard files"
+    Files produced by Egeria supplied connectors now have specific file extensions to help identify them in the file system.  Previously they used the file extension for their format 9such as `.json`.
+
+    | File Extension   | File Type Name                                               |
+    |------------------|:-------------------------------------------------------------|
+    | omarchive        | Open Metadata Archive File                                   |
+    | config           | OMAG Server Configuration Document                           |
+    | cohortregistry   | OMAG Server Cohort Registry                                  |
+    | omalrecord       | Open Metadata Audit Log Record File                          |
+    | auditlog         | Open Metadata Audit Log Folder                               |
+    | openlineageevent | Open Lineage Event File                                      |
+
+??? functional "ConnectorTypes can now identify the deployed implementation type for their connector"
+    The developer for a [connector](/concepts/connector) can provide information about their connector's implementation in a [connector type](/concepts/connector-type) object that can be retrieved from its [connector provider](/concepts/connector-provider).  The [Open Connector Framework (OCF)](/frameworks/ocf/overview) has been extended to allow the connector type to include the deployed implementation type in addition to the type name of the asset subtype that this connector represents.  Assets of this type are linked to [connection](/concepts/connection) objects via the [*ConnectionToAsset*](/types/2/205-Connectionr-Linkage) relationship.
+
+??? functional "Integration Connector Providers can now list catalog target types"
+    The developer of an [integration connector](/concepts/integration-connector) can provide information about the third party technology it exchanges metadata with through [catalog target types](/concepts/catalog-target).
+
+??? functional "Extension to the OpenConnectorArchive"
+    The `OpenMetadataArchive.omarchive` (was `OpenMetadataArchive.json`) now contains reference data for many [file types](/concepts/file-type) and [deployed implementation types](/concepts/deployed-implementation-type).
 
 --8<-- "snippets/abbr.md"
