--- a/site/docs/release-notes/5-0.md
+++ b/site/docs/release-notes/5-0.md
@@ -1,9 +1,19 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 4.4 (Expected December 2023)
+## Release 5.0 (Expected February 2024)
 
-_**These are DRAFT release notes.  The notes will be updated until & when 4.4 is released**_
+_**These are DRAFT release notes.  The notes will be updated until & when 5.0 is released**_
+
+Release 5.0 is a major functional release focused on usability, both from the point of view of the first-time user of Egeria, and developers of the code.  It has six themes:
+
+* *Simplified up and running* - improvements to the OMAG Server Platform and administration services to make it easier to set up and run, plus new sample server configurations, and a python client for administration calls.
+* *Content pack of connector metadata* - metadata to pre-configure the connectors supplied with Egeria, and provide valid value sets describing technology types and file types.
+* *UI back-end consolidation* - updates to the view server to allow both Egeria UIs to connect to it whether it is running in the OMAG Server Platform or OMAG Server Runtime.  This eliminates the need to run the Egeria UI application.
+* *Digital Product Support* - new APIs for creating a digital product catalog.
+* *Survey Support* - new framework, services and report utility to support the surveying of infrastructure to understand its contents before embarking on wholesale cataloguing and governance.
+* *Reduction of technical debt* - there has been internal code changes to remove deprecated code, remove the duplication of type information and bug fixes.
+
 
 ??? functional "Open Metadata Types"
     * The [*Anchors*](/types/0/0010-Base-Model) classification is able to store the type of the anchor as well as its GUID.
@@ -23,22 +33,53 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is
     * The [*ConnectorType*](/types/2/0201-Connectors-and-Connections) entity has new attribute called *deployedImplementationType* to allow a connector writer to record the [deployed implementation type](/concepts/deployed-implementation-type) that the connector works with.
 
 ??? warning "XTDB repository connector are now in egeria.git"
-    The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  There are three new administration commands to simplify the configuration of an XTDB repository.  This change is in recognition that XTDB is our premier metadata repository.  
+    The XTDB repository connector is now located in the core Egeria git repository which means it is always available in the containers and distributions.  This change is in recognition that XTDB is our premier metadata repository.  There are three new administration commands to simplify the configuration of an XTDB repository.
 
-??? functional "Extended support for files"
-    The context for the [Files Integrator OMIS](/services/omis/files-integrator/overview) has been updated to support a file system listener.
+    * Configure XTDB with an in-memory repository
+    * Configure XTDB with a local file-based key-value store
+    * Configure XTDB with a connection, allowing more complex configurations to be set up
 
-??? functional "New View Service: Automated Curation OMVS"
-    [Automated Curation OMVS](/services/omvs/automated-curation/overview) is a new view service in design that supports UIs that enable the user to set up integration connectors in an integration daemon, run engine actions and governance action processes.
-    
+   The java package name of the integrated version of the connector has changed from `org.odpi.egeria.connectors.juxt.xtdb.repositoryconnector.XtdbOMRSRepositoryConnectorProvider` to `org.odpi.openmetadata.adapters.repositoryservices.xtdb.repositoryconnector.XTDBOMRSRepositoryConnectorProvider` so it is possible to continue to run the original version of the XTDB connector in V5.0.
+
+??? danger "XTDB hang, or platform exit due to mismatch crypto library"
+    On the latest level of the MacOs operating system we have experienced hangs during server startup, or the OMAG Server Platform exiting with a message complaining about the unsafe load of a cryptographic library.  A question has been raised with the XTDB community to find out more about this library. In the meantime, there is a workaround if you see this issue: set the following environment variables before starting your OMAG Server Platform.  This switches XTDB to using its own cryptography libraries.
+
+    ```properties
+    XTDB_DISABLE_LIBCRYPTO=True;XTDB_ENABLE_BYTEUTILS_SHA1=True
+    ```
+
+??? functional "Support for default configuration documents"
+    There is a new `application.properties` property supported by the OMAG Server Platform that allows a default [configuration document](/concepts/configuration-document) to be set up for the configuration document store.  This provides the initial content for each new server configuration created on the platform.   The new property is called `platform.default.config.document` and is described in the [Administration Guide](/guides/admin/configuring-the-omag-server-platform/#configuring-the-default-configuration-document).
+
+??? functional "New administration commands for basic server properties"
+    The administration services support new commands to set up, retrieve and clear the basic server properties in a server's [configuration document](/concepts/configuration-document) in one operation.  These properties are *serverDescription*, and *maxPageSize*.  The new called are described in the [Administration Guide](/guides/admin/servers/configuring-a-metadata-access-store/#set-basic-server-properties).
+
+??? functional "New administration command to retrieve the metadata collection name"
+    The administration services support a new command to retrieve the metadata collection name set up for a repository in a [cohort member](/concepts/cohort-member) server.  This complements the calls to set up the metadata collection name and metadata collection id, and retrieve the metadata collection id.
+
+??? tip "*Governance Action* is renamed to *Engine Action*"
+    If you have been using Egeria for a while, you may be familiar with the term *Governance Action* as the mechanism used to control the execution of automated actions in the [Engine Hosts](/concepts/engine-host).  In release 5.0, *Governance Action* is renamed to *Engine Action* to create a greater name differentiation between the concepts that are used to define the governance behaviour and those used to control the execution of this behaviour.  The term *Governance Action* is now used as a general term for a [Governance Action Process](/concepts/governance-action-process) or a [governance action type](/concepts/governance-action-type).  There is also a differentiation between a Governance Action Type that is used to initiate a standalone Engine Action and a specialized Governance Action Type called a [Governance Action Process Step](/concepts/governance-action-process-step) that describes a single step in a Governance Action Process.
+
+??? functional "New framework services"
+    The framework services provide common services to the [Open Metadata Access Services (OMASs)](/services/omas).  The [Governance Action Framework Service](/services/gaf-metadata-management) includes a new ser of services called the `Open Governance Service` that provides services to define governance actions such as [governance action processes](/concepts/governance-action-process) and [governance action types](/concepts/governance-action-type), and the initiation of [engine actions](/concepts/engine-action) either directly or via a governance action process or governance action type.
+
+    All OMASs now have clients for the Connected Asset Service, Open Metadata Store, Open Governance Service and the Open Integration Service.
+
+??? functional "New Survey Action Framework (SAF)"
+    The [Survey Action Framework (SAF)](/frameworks/saf/overview) supports a new type of connector called a [survey action service](/concepts/survey-action-service) that implements a survey of the contents of a particular digital resource such as a directory (folder) on the filesystem, a database or a file.  The results of its analysis are stored in open metadata as a [survey report](/concepts/survey-report) linked off of the asset that describes the surveyed resource.  The purpose of the survey report is to help in the initial understanding of a deployed IT landscape to help decide where to focus future effort in cataloguing and governing key resources.  They can also be scheduled to run at regular intervals, creating a history of how the digital resource is changing over time.
+
+    There are implementations of three survey action services: one for a directory (folder, once for a file and another, more specialised service, for CSV files.  There is also a *SurveyReport* utility to print the resulting report. 
+
+    The survey action services run in the [Engine Host](/concepts/engine-host).   There is a new Open Metadata Engine Service (OMES) to support survey action services. It is called the [Survey Action OMES](/services/omes/survey-action/overview).
+
+??? deprecation "Open Discovery Framework (ODF) is now deprecated"
+    The function of the Survey Action Framework (SAF) is based on the [Open Discovery Framework (ODF)](/frameworks/odf/overview), which has now been deprecated.  The reason for this is two-fold.  Firstly the use of the term "discovery" in the framework's name is unfortunate since it is not the only mechanism that Egeria has for discovering metadata.  This makes the descriptions about metadata discovery confusing.  Secondly, the Open Discovery Framework has some usability issues relating to the discovery of schemas that have now been fixed in the Survey Action Framework.  The Open Discovery Framework will remain in the codebase for at least 6 months to allow time for the existing open discovery services to move to the Survey Action Framework. It is recommended that all new implementations use the Survey Action Framework.
+
+??? functional "Extended support for file system monitoring"
+    The context for all the [Open Metadata Integration Services (OMIS)](/services/omis) has been updated to support a file system listener.  This means that [integration connectors](/concepts/integraiton-connector) can easily monitor changing files and directories.  This can be useful for situations where new information is being exchanged with open metadata using files such as CSV files and spreadsheets.
+
 ??? functional "New View Service: Collection Manager OMVS"
     [Collection Manager OMVS](/services/omvs/collection-manager/overview) supports the organizing and browsing of metadata in collections.  Collections can themselves be organized hierarchically.  An example of its use is in managing the collections of assets that make up digital products.
-
-??? functional "New View Service: Notification Manager OMVS"
-    [Notification Manager OMVS](/services/omvs/notification-manager/overview) supports the management and querying of [Context Events](/concepts/context-event).
-
-??? functional "New Engine Service: Event Action OMES"
-    [Event Action OMES](/services/omes/event-action/overview) supports the running of [event-action-services](/concepts/event-action-service).
 
 ??? functional "Improved anchor support"
     Anchor classifications now include the type name of the anchor entity.  This allows the Anchor classification to be used to search for string values in any element that is anchored to a particular type of element.
@@ -106,7 +147,10 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.4 is
 ??? functional "Integration Connector Providers can now list catalog target types"
     The developer of an [integration connector](/concepts/integration-connector) can provide information about the third party technology it exchanges metadata with through [catalog target types](/concepts/catalog-target).
 
+??? functional "Governance Service Providers can now list action target types"
+The developer of a [governance service](/concepts/governance-service) can provide information about the third party technology it exchanges metadata with through [action target types](/concepts/action-target).
+
 ??? functional "Extension to the OpenConnectorArchive"
-    The `OpenMetadataArchive.omarchive` (was `OpenMetadataArchive.json`) now contains reference data for many [file types](/concepts/file-type) and [deployed implementation types](/concepts/deployed-implementation-type).
+    The `OpenMetadataArchive.omarchive` (was `OpenMetadataArchive.json`) now contains reference data for many [file types](/concepts/file-type) and [deployed implementation types](/concepts/deployed-implementation-type).  The deployed implementation types include details of Egeria's runtimes and services and how they link together.  The deployed implementation types are also linked to details of the connectors that work with the associated technology.  This is to assist someone setting up new automated curation and governance activities in the open metadata ecosystem.
 
 --8<-- "snippets/abbr.md"
